[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "GabriellBarbosa",email = "bielbarbosa900@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (==3.1.0)",
    "flask_cors (==5.0.0)",
    "pydub (==0.25.1)",
    "pytubefix (==8.8.2)",
    "moviepy (==2.1.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
